--- a/.github/workflows/ny-player.yml
+++ b/.github/workflows/ny-player.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: 'gradle'
+        cache: 'none'
         
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
