--- a/.github/workflows/ny-player.yml
+++ b/.github/workflows/ny-player.yml
@@ -231,7 +231,7 @@ jobs:
         </resources>
         EOF
         
-    - name: 📄 Create AndroidManifest.xml (FIXED: Using valid theme)
+    - name: 📄 Create AndroidManifest.xml 
       run: |
         cat > app/src/main/AndroidManifest.xml << 'EOF'
         <?xml version="1.0" encoding="utf-8"?>
