--- a/.github/workflows/ny-player.yml
+++ b/.github/workflows/ny-player.yml
@@ -10,7 +10,7 @@ on:
       create_release:
         description: 'Create GitHub Release'
         required: false
-        default: false
+        default: 'false'
         type: boolean
 
 jobs:
