--- a/.github/workflows/ny-player.yml
+++ b/.github/workflows/ny-player.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         # Create project directories
         mkdir -p android-app/app/src/main/{java/com/nybots/app,res/{layout,values,mipmap-hdpi,mipmap-mdpi,mipmap-xhdpi,mipmap-xxhdpi,mipmap-xxxhdpi,raw,drawable,anim,xml}}
+        mkdir -p android-app/gradle/wrapper
         cd android-app
         
         # Create Gradle Wrapper
@@ -41,6 +42,7 @@ jobs:
         
         # Create gradlew
         curl -s https://raw.githubusercontent.com/gradle/gradle/master/gradlew -o gradlew
+        curl -s https://raw.githubusercontent.com/gradle/gradle/master/gradlew.bat -o gradlew.bat
         chmod +x gradlew
         
         # Create root build.gradle
@@ -59,6 +61,69 @@ jobs:
             }
         }
         EOF
+        
+        # Create settings.gradle
+        cat > settings.gradle << 'EOF'
+        include ':app'
+        rootProject.name = "NYBotsApp"
+        EOF
+        
+        # Create app build.gradle
+        cat > app/build.gradle << 'EOF'
+        plugins {
+            id 'com.android.application'
+            id 'org.jetbrains.kotlin.android'
+        }
+        
+        android {
+            namespace '${{ github.event.inputs.package_name }}'
+            compileSdk 34
+            
+            defaultConfig {
+                applicationId "${{ github.event.inputs.package_name }}"
+                minSdk 24
+                targetSdk 34
+                versionCode 1
+                versionName "1.0.0"
+            }
+            
+            buildTypes {
+                release {
+                    minifyEnabled true
+                    shrinkResources true
+                    proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                }
+            }
+            
+            compileOptions {
+                sourceCompatibility JavaVersion.VERSION_1_8
+                targetCompatibility JavaVersion.VERSION_1_8
+            }
+            
+            kotlinOptions {
+                jvmTarget = '1.8'
+            }
+            
+            buildFeatures {
+                viewBinding true
+            }
+        }
+        
+        dependencies {
+            implementation 'androidx.core:core-ktx:1.12.0'
+            implementation 'androidx.appcompat:appcompat:1.6.1'
+            implementation 'com.google.android.material:material:1.10.0'
+            implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+            implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+            implementation 'androidx.webkit:webkit:1.8.0'
+            implementation 'com.airbnb.android:lottie:6.1.0'
+            implementation 'androidx.biometric:biometric:1.1.0'
+            implementation 'androidx.camera:camera-camera2:1.3.0'
+            implementation 'androidx.camera:camera-lifecycle:1.3.0'
+            implementation 'androidx.camera:camera-view:1.3.0'
+        }
+        EOF
+
         
         # Create settings.gradle
         cat > settings.gradle << 'EOF'
